--- a/ansible/roles/container/templates/init.sh.j2
+++ b/ansible/roles/container/templates/init.sh.j2
@@ -2,11 +2,11 @@
 
 export DEBIAN_FRONTEND=noninteractive
 
-USER=vagrant
+USER="{{ host.user }}"
 HOME=/home/$USER
 
 sudo apt update
-sudo apt install -y curl ca-certificates apt-transport-https
+sudo apt install -y curl ca-certificates apt-transport-https software-properties-common
 
 # install docker
 sudo install -m 0755 -d /etc/apt/keyrings
@@ -28,11 +28,11 @@ mkdir $HOME/.docker
 sudo chown "$USER":"$USER" /home/"$USER"/.docker -R
 sudo chmod g+rwx "$HOME/.docker" -R
 
-sudo systemctl enable docker
-sudo systemctl enable containerd
+sudo systemctl enable --now docker
+sudo systemctl enable --now containerd
 
 # install ansible
 sudo add-apt-repository --yes --update ppa:ansible/ansible
-sudo apt install -y ansible
-sudo pip3 install docker
+sudo apt install -y python-is-python3 python3-pip ansible 
+sudo pip install docker
 sudo ansible-galaxy collection install community.docker
