--- a/ansible/roles/prometheus/templates/prometheus.yml.j2
+++ b/ansible/roles/prometheus/templates/prometheus.yml.j2
@@ -2,7 +2,18 @@ global:
   scrape_interval: 60s
 
 scrape_configs:
+  - job_name: prometheus
+    static_configs:
+      - targets:
+        - "localhost:{{ container_port }}"
+
+  - job_name: docker
+    static_configs:
+      - targets:
+        - "{{ host_ip }}:{{ metrics_port }}"
+
   - job_name: file_sd
     file_sd_configs:
       - files:
-          - /etc/prometheus/targets.json
+        - /etc/prometheus/targets.json
+        - /etc/prometheus/file_sd/*.json
