--- a/ansible/roles/prometheus/templates/targets.json.j2
+++ b/ansible/roles/prometheus/templates/targets.json.j2
@@ -1,33 +1,20 @@
 [
   {
     "targets": [
-      "localhost:9090",
+      "{{ host_ip }}:{{ node_exporter_port }}",
     ],
     "labels": {
-      "node": "control",
-      "target": "prometheus"
+      "target": "node_exporter",
       "group": "sd",
       "type": "file"
     }
   },
   {
     "targets": [
-      "192.168.35.11:9100",
+      "{{ host_ip }}:{{ cadvisor_port }}"
     ],
     "labels": {
-      "node": "pod-1",
-      "target": "node-exporter"
-      "group": "sd",
-      "type": "file"
-    }
-  },
-  {
-    "targets": [
-      "192.168.35.11:8888"
-    ],
-    "labels": {
-      "node": "pod-1",
-      "target": "c-advisor"
+      "target": "cadvisor",
       "group": "sd",
       "type": "file"
     }
