--- a/ansible/roles/prometheus/templates/targets.json.j2
+++ b/ansible/roles/prometheus/templates/targets.json.j2
@@ -1,7 +1,7 @@
 [
   {
     "targets": [
-      "{{ host_ip }}:{{ node_exporter_port }}",
+      "{{ host_ip }}:{{ node_exporter_port }}"
     ],
     "labels": {
       "target": "node_exporter",
