--- a/docker_mgmt_webapp/src/index.css
+++ b/docker_mgmt_webapp/src/index.css
@@ -11,7 +11,15 @@ p {
   margin: 0;
 }
 
+iframe {
+  border: none;
+}
+
 #root {
   width: 100%;
   height: 100vh;
+}
+
+#webpack-dev-server-client-overlay {
+  display: none;
 }
