--- a/docker_mgmt_webapp/src/index.css
+++ b/docker_mgmt_webapp/src/index.css
@@ -7,11 +7,28 @@ html, body {
   margin: 0;
 }
 
+ul, ol, li {
+  padding: 0;
+  margin: 0;
+}
+
 p {
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
+a:visited {
+  color: inherit;
+}
+
 iframe {
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  overflow: auto;
   border: none;
 }
 
