--- a/ansible/roles/prometheus/templates/prometheus.yml.j2
+++ b/ansible/roles/prometheus/templates/prometheus.yml.j2
@@ -15,6 +15,6 @@ scrape_configs:
   - job_name: file_sd
     file_sd_configs:
       - files:
-        - /etc/prometheus/targets.json
-        - /etc/prometheus/file_sd/*.json
+        - targets.json
+        - file_sd/*.json
         
