feat: ansible 정리

--- a/ansible/roles/prometheus/templates/daemon.json.j2
+++ b/ansible/roles/prometheus/templates/daemon.json.j2
@@ -1,3 +1,4 @@
 {
-  "metrics-addr": "0.0.0.0:{{ metrics_port }}"
+  "metrics-addr": "0.0.0.0:{{ metrics_port }}",
+  "registry-mirrors": ["http://{{ registry_mirror_host }}"]
 }
